<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9AEAF5"
    android:orientation="vertical"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801">

        <EditText
            android:id="@+id/suname"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="#FFFFFF"
            android:drawablePadding="8dp"
            android:hint="@string/username_su"
            android:padding="8dp" />

        <EditText
            android:id="@+id/supassword"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:drawablePadding="8dp"
            android:hint="@string/password_su"
            android:inputType="textPassword"
            android:padding="8dp" />

        <Button
            android:id="@+id/subutton"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up_su"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/loginRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/already_an_user_login_su"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_txt"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

</androidx.constraintlayout.widget.ConstraintLayout>