<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9AEAF5"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687">

        <EditText
            android:id="@+id/logname"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="#FFFFFF"
            android:drawablePadding="8dp"
            android:hint="@string/username_log"
            android:padding="8dp" />

        <EditText
            android:id="@+id/logpassword"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:drawablePadding="8dp"
            android:hint="@string/password_log"
            android:inputType="textPassword"
            android:padding="8dp" />

        <Button
            android:id="@+id/logbutton"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_log"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/signupRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:padding="8dp"
            android:text="@string/not_yet_registered_signup_login"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_txt"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

</androidx.constraintlayout.widget.ConstraintLayout>